--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,8 +12,10 @@
   "dependencies": {
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
+    "gapi-script": "^1.2.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
