--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
     "@headlessui/react": "^1.7.19",
     "@heroicons/react": "^2.1.3",
     "@leecheuk/react-google-login": "^5.4.1",
+    "axios": "^1.6.8",
     "gapi-script": "^1.2.0",
     "jwt-decode": "^4.0.0",
     "react": "^18.2.0",
